remove resourse limit from client-depl

--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -15,10 +15,10 @@ spec:
       containers:
       - name: client
         image: shanbiswas/client:latest
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        # resources:
+        #   limits:
+        #     memory: "256Mi"
+        #     cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
